--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,8 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-android:$mockito_android_version"
     androidTestImplementation "org.mockito.kotlin:mockito-kotlin:$mockito_version"
 
+    implementation "androidx.navigation:navigation-compose:2.5.1"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.16.0"
     // UI Tests coming soon
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 }
